x.y.z
=====

Release date:

New features:

* Fix GitHub Issue #251: Feature request: child has same colors as parent
  - Change "Copy on Drag" behavior so that only the style will be copied

* Set default filename with a timestamp in PNG and SVG export dialogs

* Disable recent file entries that don't exist anymore

Bug fixes:

Other:

* Optimize rendering of grid lines
  - Prevent situations where a zoomed-out view would have way too many grid
    lines visible, even multiple lines per pixel

4.2.0
=====

Release date:

Thu, 18 May 2023 15:51:49 -0000

New features:

* Automatic zoom-to-fit on search

* Enable clear button on search text edit

Other:

* Add small padding on the edge label text field

* Don't zoom to fit on cleared search if used has unselected all nodes

* Remove shadow effects from edges that are not completely visible while dragging

4.1.0
=====

Release date:

Fri, 17 Mar 2023 19:48:40 -0000

New features:

* Add setting for shadow effect optimization

* Layout optimization
  - Allow bigger aspect ratio
  - Allow longer edges

* Darker default outline for nodes

* Add subtle outline for edge labels

Bug fixes:

* Fix GitHub Issue #238: Shadow effects introduce performance issues

* Fix GitHub Issue #239: Cannot drag if the drag position is inside the virtual rectangle spanned by an edge

Other:

* Update Italian translations

* Update Dutch translations

* Performance
  - Don't update scene rect when adding edges
  - Remove shadow effects from edges as long edges can make dragging stutter

4.0.0
=====

Release date:

Fri, 10 Mar 2023 17:28:44 -0000

New features:

* Add setting for 'inverted controls'
  - Pan the view with a modifier key (Ctrl) and select a group of items without a modifier key being pressed

* Add parameter initialization options to layout optimization dialog

* Add progress indicator when opening a mind map

* Add tool tips for optimizer parameters

* Add tool tip text for selecting node group by intersection
